# ai1

./: README.md  interview_materials.md  pyproject.toml  report.md  tailored_resume.md
cv/: cv-ts1.docx  cv-ts1.md
src/ai1/: crew.py  main.py
src/ai1/config/: agents.yaml  tasks.yaml
src/ai1/tools/: __init__.py
