[project]
name = "ai1"
version = "0.1.0"
description = "ai1 using crewAI"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.98.0,<1.0.0",
]

[project.scripts]
ai1 = "ai1.main:run"
run_crew = "ai1.main:run"
train = "ai1.main:train"
replay = "ai1.main:replay"
test = "ai1.main:test"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
